Alignment of codes fixed

--- a/nsuac/app/static/css/style.css
+++ b/nsuac/app/static/css/style.css
@@ -504,7 +504,8 @@ a {
     animation-delay: 0.9s; }
 
 .course-img-wrap {
-  position: relative; }
+  position: relative; 
+  height: 245px;}
 
 .course-box-content {
   display: block;
